--- a/application/composer.json
+++ b/application/composer.json
@@ -40,15 +40,16 @@
     "require": {
         "php": "^7.1",
         "roave/security-advisories": "dev-master",
+        "robmorgan/phinx": "^0.9.2",
         "zendframework/zend-component-installer": "^2.1.1",
         "zendframework/zend-config-aggregator": "^1.0",
         "zendframework/zend-diactoros": "^1.7.1",
         "zendframework/zend-expressive": "^3.0.1",
-        "zendframework/zend-expressive-helpers": "^5.0",
-        "zendframework/zend-stdlib": "^3.1",
-        "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-expressive-fastroute": "^3.0",
-        "zendframework/zend-expressive-zendviewrenderer": "^2.0"
+        "zendframework/zend-expressive-helpers": "^5.0",
+        "zendframework/zend-expressive-zendviewrenderer": "^2.0",
+        "zendframework/zend-servicemanager": "^3.3",
+        "zendframework/zend-stdlib": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0.1",
