--- a/application/composer.json
+++ b/application/composer.json
@@ -43,12 +43,15 @@
         "robmorgan/phinx": "^0.9.2",
         "zendframework/zend-component-installer": "^2.1.1",
         "zendframework/zend-config-aggregator": "^1.0",
+        "zendframework/zend-db": "^2.9",
         "zendframework/zend-diactoros": "^1.7.1",
         "zendframework/zend-expressive": "^3.0.1",
         "zendframework/zend-expressive-fastroute": "^3.0",
         "zendframework/zend-expressive-helpers": "^5.0",
         "zendframework/zend-expressive-zendviewrenderer": "^2.0",
+        "zendframework/zend-paginator": "^2.8",
         "zendframework/zend-servicemanager": "^3.3",
+        "zendframework/zend-session": "^2.8",
         "zendframework/zend-stdlib": "^3.1"
     },
     "require-dev": {
@@ -60,7 +63,14 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/App/src/"
+            "App\\": "src/App/src/",
+            "Area\\": "src/Area/src/",
+            "Block\\": "src/Block/src/",
+            "Content\\": "src/Content/src/",
+            "Common\\": "src/Common/src/",
+            "Page\\": "src/Page/src/",
+            "PageTemplate\\": "src/PageTemplate/src/",
+            "PageView\\": "src/PageView/src/"
         }
     },
     "autoload-dev": {
