--- a/application/composer.json
+++ b/application/composer.json
@@ -50,6 +50,7 @@
         "zendframework/zend-expressive-helpers": "^5.0",
         "zendframework/zend-expressive-zendviewrenderer": "^2.0",
         "zendframework/zend-filter": "^2.8",
+        "zendframework/zend-hydrator": "^2.4",
         "zendframework/zend-paginator": "^2.8",
         "zendframework/zend-servicemanager": "^3.3",
         "zendframework/zend-session": "^2.8",
