--- a/spa/config/autoload/zend-db.local.php.dist
+++ b/spa/config/autoload/zend-db.local.php.dist
@@ -7,6 +7,10 @@ return [
                 'driver' => 'Pdo_Sqlite',
                 'dsn'    => 'sqlite:./data/database/content-development.sqlite3',
             ],
+            'Application\Db\CredentialsAdapter' => [
+                'driver' => 'Pdo_Sqlite',
+                'dsn'    => 'sqlite:./data/database/content-development.sqlite3',
+            ],
         ],
     ],
 ];
