--- a/spa/composer.json
+++ b/spa/composer.json
@@ -39,6 +39,7 @@
     },
     "require": {
         "php": "^7.1",
+        "michelf/php-markdown": "^1.8",
         "mockery/mockery": "^1.1",
         "ramsey/uuid": "^3.7",
         "roave/security-advisories": "dev-master",
