--- a/spa/composer.json
+++ b/spa/composer.json
@@ -101,7 +101,8 @@
             "Event\\": "src/Event/src/",
             "PageResource\\": "src/PageResource/src/",
             "I18n\\": "src/I18n/src/",
-            "Shrt\\": "src/Shrt/src/"
+            "Shrt\\": "src/Shrt/src/",
+            "Article\\": "src/Article/src/"
         }
     },
     "autoload-dev": {
